kubernetes/apps/automation/windmill/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: windmill
  namespace: automation
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
spec:
  hostnames: ["windmill.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: windmill
          port: 8000
          weight: 1
